# CCenterFinder

./: CMakeLists.txt  README.md  main.cpp  run_benchmark.py
.github/workflows/: cmake-multi-platform.yml
data/: homograph_fn_logs.csv  homograph_fp_logs.csv  mc2d_reprojection_errors.csv  mc2d_rotation_errors.csv  outlier_summary.csv  validation_ellipse_centers.csv  validation_false_found_centers.csv  validation_true_centers.csv
data/2d_exp/: validation_error_vectors.csv  validation_mass_centers.csv  validation_real_centers.csv
data/mc2d/: mc2d_translation_errors.csv
data/pnp/: pnp_ellipse_center_errors.csv  pnp_false_minima_errors.csv  pnp_mass_center_errors.csv  pnp_real_center_errors.csv  pnp_true_minima_errors.csv
data/pnp/ransac/: pnp_ellipse_center_errors.csv  pnp_false_minima_errors.csv  pnp_mass_center_errors.csv  pnp_ransac_errors.csv  pnp_real_center_errors.csv  pnp_true_minima_errors.csv
include/: AbstractModel.hpp  Circle3DModel.hpp  Fit3DCircle.hpp  GRANSAC.hpp  RobustFit3DCircle.hpp  fit3dcicle.hpp  ransac.h  timer.hpp
include/rtl/: RTL.hpp
python/: demo.ipynb  main_carlo_pcl_3d.py  main_valid_3d_2d_pnp.py
python/animation/: test_circle.py  test_gif.py
python/animation/pyransac3d/: __init__.py  circle_cga.py
python/exp/: main_ransac_exp.py  monte_carlo_2d_refinement.py  monte_carlo_validation_homograph.py
python/plots/: compare_decoupled_vs_joint.py  plot_monte_carlo_results.py  plot_outlier_results.py
python/utils/: Circle3DFitting.py  Circle3DFittingPCL.py  analyze_cpp_results.py  cga_joint_fitting.py  compare_decoupled_vs_joint.py  ellipse_center_refinement.py  experiment_2d_refinement.py  experiment_extrinsic_finding.py  find_rectify_homography.py  grid_seach_refinement.py  main_valid_3d_2d_pnp.py  monte_carlo_2d_refinement.py  monte_carlo_benchmark.py  monte_carlo_test_2d_center.py  monte_carlo_test_extrinsic_finding.py  monte_carlo_validation_homograph.py  ransac_2c_center_refinement.py  ransac_2d_center_refinement.py  utility.py
src/: benchmark_circle_fitting_noise.cpp  benchmark_outlier.cpp  main.cpp  monte_carlo_benchmark.cpp  simple_test.cpp
